--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,13 @@
 {
-  "cleanUrls": true
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "Content-Type",
+                    "value": "text/html; charset=utf-8"
+                }
+            ]
+        }
+    ]
 }
